argocd/manifests/cilium-config/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: default
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "192.168.0.200"
  listeners:
    - name: https-wildcard
      protocol: HTTPS
      port: 443
      hostname: "*.pitpe.app"
      tls:
        mode: Terminate
        certificateRefs:
        - name: pitpe-app-tls # Certificate が生成した Secret 名を指定
      allowedRoutes:
        namespaces:
          from: All
    - name: https-apex
      protocol: HTTPS
      port: 443
      hostname: "pitpe.app"
      tls:
        mode: Terminate
        certificateRefs:
        - name: pitpe-app-tls # Certificate が生成した Secret 名を指定
      allowedRoutes:
        namespaces:
          from: All
